# academic-rag-system

./: .gitignore  README.md  pyproject.toml
apps/: gradio_app.py
configs/: adaptive_chunker.yaml  answer_generator.yaml  hybrid_retriever.yaml
notebooks/: end_to_end_demo.ipynb
src/academic_rag_system/evaluation/: metrics.py
src/academic_rag_system/generation/: answer_generator.py
src/academic_rag_system/preprocessing/: adaptive_chunker.py  pdf_cleaner.py
src/academic_rag_system/retrieval/: bm25.py  hybrid_retriever.py
